noinst_LIBRARIES = libAtoms.a
libAtoms_a_SOURCES = Atoms.c Atoms.h CHECK.c ChainofStates.c Config.c Dacapo.c Gaussian.c Gr.c LeastSquareStrain.c Mendeleyev.c Motion.c NIST.h Neighborlist.c VASP.c Voronoi.c 


AM_CFLAGS = -I$(top_srcdir)/VecMat3 -I$(top_srcdir)/VecMat -I$(top_srcdir)/IO -I$(top_srcdir)/Scalar

